[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.190"
serde_json = "1.0"
